--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,7 @@ env:
     - HHVM_VERSION=4.50.0
     - HHVM_VERSION=4.51.0
     - HHVM_VERSION=4.52.1
+    - HHVM_VERSION=4.53.0
     - HHVM_VERSION=latest
 install:
   - docker pull hhvm/hhvm:$HHVM_VERSION
