--- a/composer.json
+++ b/composer.json
@@ -6,14 +6,15 @@
   "require": {
     "hhvm": "^4.44",
     "hhvm/hsl": "^4.0",
-    "hhvm/hsl-experimental": "^4.50",
     "hhvm/hhvm-autoload": "^3.0",
     "facebook/hack-http-request-response-interfaces": "^0.3"
   },
   "require-dev": {
     "hhvm/hacktest": "^2.0",
     "facebook/fbexpect": "^2.7",
-    "hhvm/hhast": "^4.0"
+    "hhvm/hhast": "^4.0",
+    "hhvm/hsl-experimental": "^4.50",
+    "ytake/hungrr": "^0.10.0"
   },
   "autoload": {
     "psr-4": {
