added cookie response

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "ytake/hack-http",
+  "name": "ytake/hack-cookie",
   "type": "library",
   "license": "MIT",
   "minimum-stability": "stable",
