--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,7 @@
 {
   "name": "ytake/hack-cookie",
+  "description": "Cookies for facebook/hack-http-request-response-interfaces.",
+  "keywords": ["http", "cookies", "hhvm", "hack"],
   "type": "library",
   "license": "MIT",
   "minimum-stability": "stable",
